Fixed issue with happy face icon being cut off in benefits section when the <li> is only 1 line

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -134,6 +134,7 @@ h2{
   background: url(../images/icon-happy-24.png) no-repeat;
   padding-left: 42px;
   margin-bottom: 1em;
+  min-height: 24px;
 }
 .navbar-brand{
   background: url(../images/icon-happy-28-black.png) no-repeat left center;
